Server side rendering implemented. closes #50

--- a/src/index.html
+++ b/src/index.html
@@ -3,10 +3,10 @@
   <head>
     <meta charset="utf-8">
     <title>SpeedRunsLive</title>
-    <link rel="stylesheet" href="bundle.css" />
+    <link rel="stylesheet" href="/bundle.css" />
   </head>
   <body>
-        <div id="root"></div>
+    <div id="root"></div>
   </body>
   <script src="/bundle.js"></script>
 </html>
